import data to database

--- a/myMapSite/templates/ubike.html
+++ b/myMapSite/templates/ubike.html
@@ -27,6 +27,9 @@
 			<p>Chinwei Hsu</p>
 			<p>{{ refresh_time }}</p>
 		</div>
+		<div class="btn" style="text-align: center">
+			<a href= "http://127.0.0.1:8000/ubike"><button type="button">Refresh</button></a>
+		</div>
 		<div id="map" class="container"></div>
 		<div>{{ mydata }}</div>
 		<script type="text/javascript">
