--- a/myMapSite/templates/youbike.html
+++ b/myMapSite/templates/youbike.html
@@ -94,6 +94,12 @@
         	var chart = new google.visualization.Histogram(document.getElementById('histogram_chart'));
         	chart.draw(data, options);
         }
+
+        function hightlightMarker(e){
+        	var marker = e.target;
+
+        	markder.setStyle
+        }
 		</script>
 		</head>
 		<body>
