--- a/myMapSite/templates/youbike.html
+++ b/myMapSite/templates/youbike.html
@@ -94,16 +94,10 @@
         	var chart = new google.visualization.Histogram(document.getElementById('histogram_chart'));
         	chart.draw(data, options);
         }
-
-        function hightlightMarker(e){
-        	var marker = e.target;
-
-        	markder.setStyle
-        }
 		</script>
 		</head>
 		<body>
-			<div><h1>Youbike Data Visualization</h1></div>
+			<div><h1>台北市運輸地圖</h1></div>
 			<div id="map" class="container"></div>
 			<div id="curve_chart" class="chart"></div>
 			<div id="histogram_chart" class="chart"></div>
