--- a/myMapSite/templates/youbike.html
+++ b/myMapSite/templates/youbike.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -13,8 +14,8 @@
 		<link rel="stylesheet" type="text/css" href="{% static 'youbike.css' %}">
 		<link rel="stylesheet" type="text/css" src="bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
+		
 		{# datepickertest #}
-		{# // <script type="text/javascript" src="{% static 'jquery.min.js' %}"></script> #}
   		<script type="text/javascript" src="{% static 'moment.min.js' %}"></script>
   		<script type="text/javascript" src="{% static 'bootstrap.min.js' %}"></script>
   		<script type="text/javascript" src="{% static 'bootstrap-datetimepicker.min.js' %}"></script>
@@ -22,15 +23,18 @@
   		<link rel="stylesheet" href="{% static 'bootstrap-datetimepicker.min.css' %}" />
 		{# ============== #}
 
-		<script type="text/javascript">
+		{# form test #}
 
+		{# ============== #}
+
+		<script type="text/javascript">
 		var allStationData = {{ stations|safe }}; //讀入所有的資料
 
 		//初始化頁面
 		$(document).ready(function(){
 
 			$('#datetimepicker1').datetimepicker({
-				format: 'YYYY/MM/DD'
+				format: 'YYYY/MM/DD',
 			});
 
 			var map = L.map('map').setView([25.0408578889, 121.567904444], 13);
