--- a/myMapSite/templates/youbike.html
+++ b/myMapSite/templates/youbike.html
@@ -7,35 +7,87 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Youbike Data Visualization</title>
 
-		<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-		<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css">
-		<link rel="stylesheet" type="text/css" href="{% static 'youbike.css' %}">
-		<link rel="stylesheet" type="text/css" src="bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
-		
-		{# datepickertest #}
-  		<script type="text/javascript" src="{% static 'moment.min.js' %}"></script>
-  		<script type="text/javascript" src="{% static 'bootstrap.min.js' %}"></script>
-  		<script type="text/javascript" src="{% static 'bootstrap-datetimepicker.min.js' %}"></script>
-  		<link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   		<link rel="stylesheet" href="{% static 'bootstrap-datetimepicker.min.css' %}" />
-		{# ============== #}
+  		<link rel="stylesheet" type="text/css" href="{% static 'youbike.css' %}">
+		</head>
+		<body>
+			<div><h1>台北市運輸地圖</h1></div>
+			<div class="container">
+				<div class="row">
+				    <div class='col-sm-5'>
+				    <span style="color:white">From</span>
+				        <div class="form-group">
+				            <div class='input-group date' id='datetimepicker1'>
+				                <input type='text' class="form-control" />
+				                <span class="input-group-addon">
+				                	<span class="glyphicon glyphicon-calendar"></span>
+				                </span>
+				            </div>
+				        </div>
+				    </div>
+				    <div class='col-sm-5'>
+				    <span style="color:white">To</span>
+				        <div class="form-group">
+				            <div class='input-group date' id='datetimepicker2'>
+				                <input type='text' class="form-control" />
+				                <span class="input-group-addon">
+				                	<span class="glyphicon glyphicon-calendar"></span>
+				                </span>
+				            </div>
+				        </div>
+				    </div>
+				    <div class="col-sm-2">
+				    	<div class="searchButton">
+	                		<button id="summit" type="button" class="btn btn-primary" href="">Search</button>
+				        </div>
+				    </div>
+				</div>
+			</div>
+			<div id="map" class="container"></div>
+			<div id="curve_chart" class="chart"></div>
+			<div id="histogram_chart" class="chart"></div>
+		</body>
 
-		{# form test #}
-
-		{# ============== #}
-
-		<script type="text/javascript">
+		<script type="text/javascript" src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.js"></script>
+		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+		<script type="text/javascript" src="{% static 'moment.min.js' %}"></script>
+  		<script type="text/javascript" src="{% static 'bootstrap-datetimepicker.min.js' %}"></script>
+  		<script type="text/javascript">
 		var allStationData = {{ stations|safe }}; //讀入所有的資料
 
 		//初始化頁面
 		$(document).ready(function(){
-
 			$('#datetimepicker1').datetimepicker({
 				format: 'YYYY/MM/DD',
 			});
+
+			$('#datetimepicker2').datetimepicker({
+				format: 'YYYY/MM/DD',
+				useCurrent: false,
+			});
+
+			var searchDateFrom;
+			var searchDateTo;
+			$('#datetimepicker1').on('dp.change', function(e){
+				$('#datetimepicker2').data("DateTimePicker").minDate(e.date);
+				searchDateFrom = $('#datetimepicker1').data("DateTimePicker");
+				console.log(searchDateFrom.viewDate());
+				//$("#summit").attr("href", "?123")
+			})
+			$('#datetimepicker2').on('dp.change', function(e){
+				$('#datetimepicker1').data("DateTimePicker").maxDate(e.date);
+				searchDateTo = $('#datetimepicker2').data("DateTimePicker");
+				console.log(searchDateTo.viewDate());
+				//$("#summit").attr("href", "?123")
+			})
+
+			$()
+
+
 
 			var map = L.map('map').setView([25.0408578889, 121.567904444], 13);
 			L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}',{
@@ -129,30 +181,5 @@
 		        layer.bringToFront();
 		    }
 		}
-
 		</script>
-		</head>
-		<body>
-			<div><h1>台北市運輸地圖</h1></div>
-			<div class="container">
-				<div class="row">
-				    <div class='col-sm-6'>
-				        <div class="form-group">
-				            <div class='input-group date' id='datetimepicker1'>
-				                <input type='text' class="form-control" />
-				                <span class="input-group-addon">
-				                	<span class="glyphicon glyphicon-calendar"></span>
-				                </span>
-				                <span class="searchbar">
-				                	<button type="button" class="btn btn-primary">Search</button>
-				                </span>
-				            </div>
-				        </div>
-				    </div>
-				</div>
-			</div>
-			<div id="map" class="container"></div>
-			<div id="curve_chart" class="chart"></div>
-			<div id="histogram_chart" class="chart"></div>
-		</body>
 	</html>
