--- a/myMapSite/ubike/static/ubike/css/youbike.css
+++ b/myMapSite/ubike/static/ubike/css/youbike.css
@@ -58,3 +58,17 @@ border-top: solid;
 border-color: gray;
 background-color: #0A0A0A;
 }
+
+
+.legend {
+    line-height: 25px;
+    color: white;
+}
+.legend i {
+    width: 25px;
+    height: 25px;
+    float: left;
+    margin-right: 10px;
+    opacity: 0.5;
+    border-radius: 25px;
+}
