--- a/myMapSite/templates/youbike.html
+++ b/myMapSite/templates/youbike.html
@@ -115,14 +115,11 @@
 				accessToken: 'pk.eyJ1IjoiZ2VvamVkaSIsImEiOiJjaWpvMDNwYnMwMHRidmFseDRhOGNrZjIwIn0.hkVHv9_Z-PpXfOLrKMlfCQ'
 			}).addTo(map);
 
-			
-			
-
 			//站點圖示屬性設定
 			customCircleMarker = L.CircleMarker.extend({
 				options: {
 					id: 0,
-					ar: 'address'
+					ar: 'address',
 				}
 			});
 
@@ -133,31 +130,73 @@
 				var marker_sbi = new customCircleMarker(allStationData[s].position,{
 					id: allStationData[s].sno,
 					ar: String(allStationData[s].ar),
-					fillOpacity: 0.5,
-					sbi: parseInt(allStationData[s].data[0][1]),
-					color: getColor(allStationData[s].data[0][1])
+					type: '可借數量',
+					val: parseInt(allStationData[s].data[0][1]),
 				});
 
 				var marker_bemp = new customCircleMarker(allStationData[s].position,{
 					id: allStationData[s].sno,
 					ar: String(allStationData[s].ar),
-					fillOpacity: 0.5,
-					bemp: parseInt(allStationData[s].data[0][2]),
-					color: getColor(allStationData[s].data[0][2])
+					type: '可還數量',
+					val: parseInt(allStationData[s].data[0][2]),
 				});
+
+				marker_sbi.setStyle({
+					fillOpacity: 0.6,
+					weight: 0,
+					color: getColor(allStationData[s].data[0][1])
+				})
+
+				marker_bemp.setStyle({
+					fillOpacity: 0.6,
+					weight: 0,
+					color: getColor(allStationData[s].data[0][1])
+				})
 
 				marker_sbi.on('click', function(e){
 					var theID=this.options.id;
 					drawLineChart(theID);
 					drawHistogram(theID);
-					console.log(this.options.ar+" sbi:"+ this.options.sbi);
+					console.log(this.options.ar+" sbi:"+ this.options.val);
 				});
 
 				marker_bemp.on('click', function(e){
 					var theID=this.options.id;
 					drawLineChart(theID);
 					drawHistogram(theID);
-					console.log(this.options.ar+" bemp:"+this.options.bemp);
+					console.log(this.options.ar+" bemp:"+this.options.val);
+				});
+
+				marker_sbi.on('mouseover',function(e){
+					this.setStyle({
+						weight: 5,
+						opacity: 1
+					});
+					info.update(this.options);
+				});
+
+				marker_bemp.on('mouseover',function(e){
+					this.setStyle({
+						weight: 5,
+						opacity: 1
+					});
+					info.update(this.options);
+				});
+
+				marker_sbi.on('mouseout',function(e){
+					this.setStyle({
+						weight: 0,
+						fillOpacity: 0.6
+					});
+					info.update();
+				});
+
+				marker_bemp.on('mouseout',function(e){
+					this.setStyle({
+						weight: 0,
+						fillOpacity: 0.6
+					});
+					info.update();
 				});
 
 				markers_sbi.push(marker_sbi);
@@ -165,28 +204,29 @@
 
 			};
 
-			var stations_bemp = L.layerGroup(markers_sbi);
+			var stations_sbi = L.layerGroup(markers_sbi);
 
-			var stations_sbi = L.layerGroup(markers_bemp);
+			var stations_bemp = L.layerGroup(markers_bemp);
 
 			stations_sbi.addTo(map);
 
-			stations_bemp.addTo(map);
+			//stations_bemp.addTo(map);
 
 			var overlayMaps = {
 				"可借數量":stations_sbi,
 				"可還數量":stations_bemp
 			};
 
+			//加入圖層控制項目
+
 			L.control.layers(overlayMaps).addTo(map);
 
 			google.charts.load('current', {'packages':['corechart']});
 
-
 			//加入地圖圖例
 			var legend = L.control({position:'bottomright'});
 			legend.onAdd = function (map) {
-				var div = L.DomUtil.create('div','info legend');
+				var div = L.DomUtil.create('div','legend');
 				var grades = [0,5,10];
 				var labels = [];
 
@@ -199,7 +239,7 @@
 			};
 			legend.addTo(map);
 
-
+			//加入地圖資訊
 			var info = L.control({position:'bottomleft'});
 
 			info.onAdd = function (map) {
@@ -209,18 +249,10 @@
 			};
 
 			info.update = function(station) {
-				this._div.innerHTML = '<h4>Youbike station information</h4>' +  (station ? '<b>' + station.ar +'</b><br />' +station.bemp + 'bikes / mi<sup>2</sup>':'Hover over a station');
+				this._div.innerHTML = '<h4>Youbike 站點資訊 </h4>' +  (station ? '<b>' + station.ar +'</b><br />'+ station.type+' : '+ station.val + ' 輛 ':'<br />Hover over a station');
 			}
 
 			info.addTo(map);
-
-			function hightlightStation(e) {
-				info.update(stations.options);
-			}
-
-			function resetHightlight(e) {
-				info.update();
-			}
 		});
 
 		//依數值決定marker呈現的顏色
@@ -264,18 +296,5 @@
         	chart.draw(data, options);
         }
 
-        function highlightFeature(e) {
-        	var layer = e.target;
-		    layer.setStyle({
-		        weight: 5,
-		        color: '#666',
-		        dashArray: '',
-		        fillOpacity: 0.7
-		    });
-
-		    if (!L.Browser.ie && !L.Browser.opera) {
-		        layer.bringToFront();
-		    }
-		}
 		</script>
 	</html>
